Upgrade various pieces.